--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div id="app">
 	<ul>
-		<li v-for="f in fruits">
-			{{ f }}
+		<li v-for="(f,i) in fruits">
+			{{ f,i }}
 		</li>
 	</ul>
 </div>
